# xf_mic_asr_offline

./: .gitignore  CMakeLists.txt  README.md  VoiceAutoStart_JetsonNano-NX.sh  VoiceAutoStart_Raspberry.sh  call.bnf  hid_test_auto.cpp  send_mark_1.py  test.cpp  xf_mic.rules
aiui_sample/: CMakeLists.txt  aiui_make.sh
aiui_sample/msc/: jw_msc.cfg  msc.cfg
aiui_sample/msc/a25cb9a0cb8cd35b1c56f7413136f2a5/local/: local.cache
aiui_sample/msc/a25cb9a0cb8cd35b1c56f7413136f2a5/sessinfo/: sessinfo_2019-08-02-10-03-19.log.cache
aiui_sample/src/: .AIUITester.cpp.swp  AIUITester.cpp  AIUITester.h  AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h  Constants.h  FileUtil.cpp  FileUtil.h  Global.h  RingBuffer.h  TestListener.cpp  TestListener.h  WriteAudioThread.cpp  WriteAudioThread.h  aiuiMain.cpp  audio_player_test.cpp  audio_recorder_test.cpp  msp_cmn.h
aiui_sample/src/jsoncpp/: json_batchallocator.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
aiui_sample/src/jsoncpp/json/: config.h  features.h  forwards.h  reader.h  value.h  writer.h
config/: appid_params.yaml  call.bnf  recognition_params.yaml  test_english.bnf
config/msc/res/asr/GrmBuilld/: azcfaaaa.d  call.g  call_16K  edhbxaea.d  hhnkdega.d  imqhxtba.d  mmheaaaa.d  rbswtvaa.d  sqieaaaa.d  wkufnlaa.d  zwwzwvaa.d
config/msc/res/asr/GrmBuilld/temp/: arlfaaaa.d  aybifwaa.d  call.g  call_16K  ddykzcaa.d  deofaaaa.d  fyrdwpaa.d  gcoeaaaa.d  kcheaaaa.d  lhheaaaa.d  mcaudaaa.d  qgieaaaa.d  rlieaaaa.d  rtpyyuba.d  tlmkzcaa.d  uikawbda.d  whsnkqba.d  zhdfaaaa.d
config/msc/res/ivw/: wakeupresource.jet
config/msc/res/tts/: xiaofeng.jet  xiaoyan.jet
config/msc/res/xtts/: common_en.jet
doc/asr/: sample.bnf
include/: asr_offline_record_sample.h  joint.h  protocol_proc_unit.h  speech_recognizer.h  user_interface.h
launch/: base.launch  mic_init.launch
src/: call_recognition.cpp  command_recognition.cpp  motion_control.cpp  node_close_feedback.cpp  node_feedback.cpp  node_opne_feedback copy.cpp  node_opne_feedback.cpp  point_navigation.cpp  refresh_mic.cpp  voice_control.cpp
srv/: Get_Awake_Angle_srv.srv  Get_Major_Mic_srv.srv
tmp/: config.txt
